[gd_scene load_steps=15 format=2]

[ext_resource path="res://menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Imagens/alaland.png" type="Texture" id=2]
[ext_resource path="res://Imagens/fundomenu.png" type="Texture" id=4]
[ext_resource path="res://botões/New Piskel (40).png" type="Texture" id=5]
[ext_resource path="res://botões/New Piskel (41).png" type="Texture" id=6]
[ext_resource path="res://botões/New Piskel (39).png" type="Texture" id=7]
[ext_resource path="res://botões/New Piskel (38).png" type="Texture" id=8]
[ext_resource path="res://botões/New Piskel (43).png" type="Texture" id=9]
[ext_resource path="res://botões/New Piskel (44).png" type="Texture" id=10]
[ext_resource path="res://botões/botaosair2.png.png" type="Texture" id=11]
[ext_resource path="res://botões/botaocancelar.png.png" type="Texture" id=12]
[ext_resource path="res://botões/ajudamarrom1.png.png" type="Texture" id=13]
[ext_resource path="res://botões/ajudamarrom.png.png" type="Texture" id=14]
[ext_resource path="res://menu/logo.gd" type="Script" id=15]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 449, 743 )
script = ExtResource( 1 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 573, 332 )
scale = Vector2( 9, 9 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="fundo"]
margin_left = -64.0
margin_top = -37.0
margin_right = 50.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.4 )

[node name="musica" type="TextureButton" parent="."]
margin_left = 906.0
margin_top = 33.0
margin_right = 997.0
margin_bottom = 82.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="musica"]
volume_db = -15.0
autoplay = true

[node name="logo" type="Sprite" parent="."]
position = Vector2( 504, 192 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
script = ExtResource( 15 )

[node name="botãojogar" type="TextureButton" parent="."]
margin_left = 458.0
margin_top = 392.0
margin_right = 550.0
margin_bottom = 482.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="botãooplcoes" type="TextureButton" parent="."]
visible = false
margin_left = 298.0
margin_top = 401.0
margin_right = 388.0
margin_bottom = 491.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="botaosair" type="TextureButton" parent="."]
margin_left = 574.0
margin_top = 388.0
margin_right = 664.0
margin_bottom = 478.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 11 )

[node name="Button" type="TextureButton" parent="."]
margin_left = 338.0
margin_top = 391.0
margin_right = 428.0
margin_bottom = 481.0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 13 )

[node name="buttonFx" type="AudioStreamPlayer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 898.0
margin_top = 563.0
margin_right = 976.0
margin_bottom = 585.0
rect_scale = Vector2( 2.32911, 1.85714 )
text = "0.6.0"

[connection signal="pressed" from="musica" to="." method="_on_musica_pressed"]
[connection signal="pressed" from="botãojogar" to="." method="_on_botojogar_pressed"]
[connection signal="pressed" from="botãooplcoes" to="." method="_on_botooplcoes_pressed"]
[connection signal="pressed" from="botaosair" to="." method="_on_botaosair_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
